bazel_dep(name = "aspect_bazel_lib", version = "2.7.3")
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "rules_rust", version = "0.45.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_getkin_kin_openapi",
    "com_github_google_osv_scanner",
    "com_github_jedib0t_go_pretty",
    "com_github_lib_pq",
    "com_github_mattn_go_sqlite3",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "com_github_tidwall_gjson",
    "org_golang_x_text",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.78.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//rust/baywatch:Cargo.toml",
        "//rust/lifegame:Cargo.toml",
    ],
)
use_repo(crate, "crates")
