load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "proto_test",
    srcs = ["proto_test.go"],
    deps = [
        "//proto/basic:basic_go_proto",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
    ],
)
