load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "basic_proto",
    srcs = ["basic.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "basic_go_proto",
    importpath = "github.com/kahlys/battools/blaze/proto/basic",
    proto = ":basic_proto",
    visibility = ["//visibility:public"],
)
