load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "blaze_proto",
    srcs = ["action_cache.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "blaze_go_proto",
    importpath = "github.com/kahlys/battools/proto/blaze",
    proto = ":blaze_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "blaze",
    embed = [":blaze_go_proto"],
    importpath = "github.com/kahlys/battools/proto/blaze",
    visibility = ["//visibility:public"],
)
