load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "build_event_stream_proto",
    srcs = ["build_event_stream.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/blaze:blaze_proto",
        "//proto/blaze/invocation_policy:blaze_invocation_policy_proto",
        "//proto/command_line:command_line_proto",
        "//proto/devtools/build/lib/packages/metrics:devtools_build_lib_packages_metrics_proto",
        "//proto/failure_details:failure_details_proto",
        "@protobuf//:any_proto",
        "@protobuf//:duration_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "build_event_stream_go_proto",
    importpath = "github.com/kahlys/battools/proto/build_event_stream",
    proto = ":build_event_stream_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/blaze:blaze_go_proto",
        "//proto/blaze/invocation_policy:blaze_invocation_policy_go_proto",
        "//proto/command_line:command_line_go_proto",
        "//proto/devtools/build/lib/packages/metrics:devtools_build_lib_packages_metrics_go_proto",
        "//proto/failure_details:failure_details_go_proto",
    ],
)
