load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "failure_details_proto",
    srcs = ["failure_details.proto"],
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "failure_details_go_proto",
    importpath = "github.com/kahlys/battools/proto/failure_details",
    proto = ":failure_details_proto",
    visibility = ["//visibility:public"],
)
