load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "options_proto",
    srcs = ["option_filters.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "options_go_proto",
    importpath = "github.com/kahlys/battools/proto/options",
    proto = ":options_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "options",
    embed = [":options_go_proto"],
    importpath = "github.com/kahlys/battools/proto/options",
    visibility = ["//visibility:public"],
)
