load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "readerjson_lib",
    srcs = ["main.go"],
    importpath = "github.com/kahlys/battools/blaze/bazelbep/readerjson",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_jedib0t_go_pretty//text",
        "@com_github_tidwall_gjson//:gjson",
    ],
)

go_binary(
    name = "readerjson",
    embed = [":readerjson_lib"],
    visibility = ["//visibility:public"],
)
