load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/kahlys/battools/blaze/code_gen/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//blaze/code_gen:go_hello",  # keep
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
