load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "basespy_lib",
    srcs = ["main.go"],
    importpath = "github.com/kahlys/codex/go/cmd/basespy",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "basespy",
    embed = [":basespy_lib"],
    visibility = ["//visibility:public"],
)
