load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "geninter_lib",
    srcs = ["main.go"],
    importpath = "github.com/kahlys/battools/go/cmd/geninter",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "geninter",
    embed = [":geninter_lib"],
    visibility = ["//visibility:public"],
)
