load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "geninter_lib",
    srcs = ["main.go"],
    importpath = "github.com/kahlys/battools/go/cmd/geninter",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "geninter",
    embed = [":geninter_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "geninter_test",
    srcs = ["main_test.go"],
    data = [
        "//go/cmd/geninter/testpkg:expected",
        "//go/cmd/geninter/testpkg:test.go",
        "//go/cmd/geninter/testpkg:test2.go",
        "//go/cmd/geninter/testpkg:test_test.go",
    ],
    embed = [":geninter_lib"],
    deps = ["@com_github_stretchr_testify//require"],
)
