load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "oracle_lib",
    srcs = ["main.go"],
    importpath = "github.com/kahlys/battools/go/cmd/oracle",
    visibility = ["//visibility:private"],
    deps = ["//go/cmd/oracle/internal/tools/webstealer"],
)

go_binary(
    name = "oracle",
    embed = [":oracle_lib"],
    visibility = ["//visibility:public"],
)
