load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "osv-viewer_lib",
    srcs = ["main.go"],
    importpath = "github.com/kahlys/battools/go/cmd/osv-viewer",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_jedib0t_go_pretty//table",
        "@com_github_jedib0t_go_pretty//text",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "osv-viewer",
    embed = [":osv-viewer_lib"],
    visibility = ["//visibility:public"],
)
