load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pika_lib",
    srcs = ["main.go"],
    importpath = "github.com/kahlys/battools/go/cmd/pika",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "pika",
    embed = [":pika_lib"],
    visibility = ["//visibility:public"],
)
