load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "proxy_lib",
    srcs = ["main.go"],
    importpath = "github.com/kahlys/battools/go/cmd/proxy",
    visibility = ["//visibility:private"],
    deps = ["//go/cmd/proxy/internal/proxy"],
)

go_binary(
    name = "proxy",
    embed = [":proxy_lib"],
    visibility = ["//visibility:public"],
)
