load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "wanda_lib",
    srcs = ["main.go"],
    importpath = "github.com/kahlys/codex/go/cmd/wanda",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_getkin_kin_openapi//openapi3",
        "@org_golang_x_text//cases",
        "@org_golang_x_text//language",
    ],
)

go_binary(
    name = "wanda",
    embed = [":wanda_lib"],
    visibility = ["//visibility:public"],
)
