load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "blaze_invocation_policy_proto",
    srcs = ["invocation_policy.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/blaze/strategy_policy:blaze_strategy_policy_proto"],
)

go_proto_library(
    name = "blaze_invocation_policy_go_proto",
    importpath = "github.com/kahlys/battools/proto/blaze/invocation_policy",
    proto = ":blaze_invocation_policy_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/blaze/strategy_policy:blaze_strategy_policy_go_proto"],
)
