load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "blaze_strategy_policy_proto",
    srcs = ["strategy_policy.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "blaze_strategy_policy_go_proto",
    importpath = "github.com/kahlys/battools/proto/blaze/strategy_policy",
    proto = ":blaze_strategy_policy_proto",
    visibility = ["//visibility:public"],
)
