load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "webstealer",
    srcs = [
        "chrome.go",
        "result.go",
    ],
    importpath = "github.com/kahlys/codex/go/cmd/oracle/internal/tools/webstealer",
    visibility = ["//go/cmd/oracle:__subpackages__"],
    deps = [
        "//go/cmd/oracle/internal/cryptox",
        "//go/cmd/oracle/internal/osx",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
    ],
)
